--- a/src/aixplorer.client/src/app/modules/home/home.component.html
+++ b/src/aixplorer.client/src/app/modules/home/home.component.html
@@ -1,51 +1,7 @@
-<section class="home-container mx-auto px-4">
+<section class="mx-auto px-4">
     <div class="mt-12">
         <div class="text-center">
-            <h3>Hi</h3>
-            <div class="text-left m-2">
-                <p class="my-3 text-gray-700">
-                    To start streaming,
-                </p>
-                <ul class="list-disc list-inside mb-6 text-left text-gray-700">
-                    <li>
-                        go to <a routerLink="/user-settings" class="text-blue-500 hover:underline">Settings</a>
-                        , select camera and microphone, click "Save",
-                    </li>
-                    <li>
-                        display the <a routerLink="/user-area/user-list" class="text-blue-500 hover:underline">User List</a>
-                        , click the name of the (logged-in) user you want to connect to,
-                    </li>
-                    <li>click "Connect". Both will receive a message with the streaming link.</li>
-                </ul>
-                <div class="mr-1">
-                    For the best experience, we recommend using one of the following browsers on mobile phones, as they have been tested:
-                    <span class="font-bold italic">Chrome</span>,
-                    <span class="font-bold italic">Firefox</span>, or
-                    <span class="font-bold italic">Brave</span>.
-                </div>
-                <div>
-                    Additionally, we encourage you to consult the <a routerLink="/info/technical-notes" class="text-blue-500 hover:underline">Technical Notes</a> for more information.
-                </div>
-            </div>
+            <h3>Welcome to AIxplorer</h3>  
         </div>
     </div>
-
-    <ng-template #loggedOut>
-        <div class="flex justify-center mt-12">
-            <div class="text-center">
-                <h2 class="text-2xl font-bold mb-4">Welcome to vStream</h2>
-                <p class="mb-6 text-gray-700">
-                    Connect with others and broadcast your unique perspective in real-time.
-                </p>
-                
-                <p class="mb-6 text-gray-700">
-                    Join our community today and start connecting!
-                </p>
-                <div class="m-2">
-                    Please click <a routerLink="login" class="text-blue-500 hover:underline">here</a> to login.
-                </div>
-            </div>
-        </div>
-
-    </ng-template>
 </section>
