feat(angular-client): update routes and add new image generation feature
- Change route from "/computer-vision/image-recognition" to "/computer-vision/image-interpretation"
- Add new route "/generative-ai/image-generation" to the menu
- Adjust ComputerVisionRoutingModule for the updated route
- Update ImageInterpretationComponent
- Introduce new ImageGenerationComponent with API integration and template
- Extend AppRoutingModule to include Generative AI routes

--- a/src/aixplorer.client/src/app/layout/layout.component.html
+++ b/src/aixplorer.client/src/app/layout/layout.component.html
@@ -33,13 +33,16 @@
                 <ul class="space-y-4 pl-4 pr-4">
 
                     <li>
-                        <a class="hover:text-gray-300" routerLink="/computer-vision/image-recognition" (click)="closeSidebar()">Image Recognition</a>
+                        <a class="hover:text-gray-300" routerLink="/computer-vision/image-interpretation" (click)="closeSidebar()">Image Interpretation</a>
                     </li>
                     <li>
                         <a class="hover:text-gray-300" routerLink="/machine-learning/regression" (click)="closeSidebar()">Regression</a>
                     </li>
                     <li>
                         <a class="hover:text-gray-300" routerLink="/nlp/sentiment-analysis" (click)="closeSidebar()">Sentiment Analysis</a>
+                    </li>
+                    <li>
+                        <a class="hover:text-gray-300" routerLink="/generative-ai/image-generation" (click)="closeSidebar()">Image Generation</a>
                     </li>
                     <li class="py-2">
                         <hr class="border-t border-gray-600">
