feat(angular-client): add new route and component, rename image interpretation component
- Add new route "/nlp/question-answering" with associated component (question-answering.component.ts, HTML, CSS)
- Update sidebar with link to Question Answering route
- Rename "image-interpretation.ts" to "image-interpretation.component.ts" for consistency

--- a/src/aixplorer.client/src/app/layout/layout.component.html
+++ b/src/aixplorer.client/src/app/layout/layout.component.html
@@ -39,7 +39,7 @@
                         <a class="hover:text-gray-300" routerLink="/machine-learning/regression" (click)="closeSidebar()">Regression</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-300" routerLink="/nlp/sentiment-analysis" (click)="closeSidebar()">Sentiment Analysis</a>
+                        <a class="hover:text-gray-300" routerLink="/nlp/question-answering" (click)="closeSidebar()">Question Answering</a>
                     </li>
                     <li>
                         <a class="hover:text-gray-300" routerLink="/generative-ai/image-generation" (click)="closeSidebar()">Image Generation</a>
