--- a/src/aixplorer.client/src/app/modules/generative-ai/components/image-generation/image-generation.component.html
+++ b/src/aixplorer.client/src/app/modules/generative-ai/components/image-generation/image-generation.component.html
@@ -8,13 +8,15 @@
         </label>
 
         <!-- Text Input -->
-        <input type="text"
-               id="textInput"
-               [(ngModel)]="textInputValue"
-               placeholder="Enter text here"
-               class="block w-full text-sm text-gray-700
-                  border border-gray-300 rounded-lg
-                  focus:outline-none focus:ring-2 focus:ring-header focus:border-transparent">
+        <textarea id="textInput"
+          [(ngModel)]="textInputValue"
+          placeholder="Enter text here"
+          rows="4"
+          class="block w-full text-sm text-gray-700
+                 border border-gray-300 rounded-lg
+                 focus:outline-none focus:ring-2 focus:ring-header focus:border-transparent">
+        </textarea>
+
 
         <!-- Start Generation Button -->
         <button [disabled]="!textInputValue"
