--- a/src/aixplorer.client/src/app/modules/computer-vision/components/image-interpretation/image-interpretation.component.html
+++ b/src/aixplorer.client/src/app/modules/computer-vision/components/image-interpretation/image-interpretation.component.html
@@ -1,5 +1,5 @@
 <div class="p-3">
-    <div class="p-6 max-w-md mx-auto my-8 bg-white rounded-lg shadow-md">
+    <div class="p-6 max-w-2xl mx-auto my-8 bg-white rounded-lg shadow-md">
         <h2 class="text-2xl font-bold text-gray-800 mb-4">Image Interpretation</h2>
 
         <div class="flex flex-col space-y-4">
@@ -12,10 +12,13 @@
                       focus:outline-none focus:ring-2 focus:ring-header focus:border-transparent">
 
             <!-- Image Preview -->
-            <div *ngIf="imageEnc" class="w-full border border-gray-300 rounded-lg overflow-hidden shadow-md">
-                <img [src]="imageEnc" alt="Image preview"
-                     class="w-full h-auto object-contain">
+            <div *ngIf="imageEnc" class="flex justify-center">
+                <div class="border border-gray-300 rounded-lg overflow-hidden shadow-md">
+                    <img [src]="imageEnc" alt="Image Preview"
+                         class="max-w-[400px] max-h-[400px] object-contain">
+                </div>
             </div>
+
             <!-- Prompt Description -->
             <p *ngIf="imageEnc" class="text-gray-700 mb-2">
                 Enter a question to ask the AI about the selected image.
@@ -27,7 +30,7 @@
             </textarea>
 
             <!-- Start Recognition Button -->
-            <button [disabled]="!selectedFile"
+            <button [disabled]="!selectedFile || isAwaitingResponse"
                     (click)="startRecognition()"
                     class="w-full px-4 py-2 text-white font-medium
                        bg-button
