--- a/src/aixplorer.client/src/app/modules/natural-language-processing/components/question-answering/question-answering.component.html
+++ b/src/aixplorer.client/src/app/modules/natural-language-processing/components/question-answering/question-answering.component.html
@@ -1,14 +1,14 @@
 <div class="p-3">
-    <div class="p-4 max-w-lg mx-auto my-8 bg-white rounded-lg shadow-md">
+    <div class="p-4 max-w-2xl mx-auto my-8 bg-white rounded-lg shadow-md">
         <h2 class="text-2xl font-bold text-gray-800 mb-4">AI Chat</h2>
         <!-- Chat History -->
         <div *ngFor="let message of chatHistory" class="mb-4">
             <div class="p-2 bg-blue-100 rounded-lg text-gray-800 mb-2">
                 <strong>User:</strong> {{ message.question }}
             </div>
-            <div *ngIf="message.answer" class="p-2 bg-green-100 rounded-lg text-gray-800">
+            <div *ngIf="message.answer" class="p-2 bg-gray-100 rounded-lg text-gray-800 overflow-x-auto">
                 <strong>AI:</strong>
-                <div [innerHTML]="formatAnswer(message.answer)" class="max-w-full overflow-x-auto whitespace-pre-wrap word-break"></div>
+                <span [innerHtml]="message.answer | markdown | async" class="max-w-full overflow-x-auto whitespace-pre-wrap word-break break-words"></span>
             </div>
         </div>
         <div class="flex flex-col space-y-4">
@@ -19,7 +19,7 @@
                  focus:outline-none focus:ring-2 focus:ring-header focus:border-transparent"
                           placeholder="Type your question here...">
             </textarea>
-            <button (click)="submitMessage()"
+            <button (click)="submitMessage()" [disabled]="isAwaitingResponse"
                     class="w-full px-4 py-2 text-white font-medium
                        bg-button
                        rounded-lg shadow-sm hover:bg-button-hover focus:outline-none focus:ring-2 focus:ring-header focus:ring-offset-2
