chore(menu): remove "Regression" and "Technical Notes" menu items

--- a/src/aixplorer.client/src/app/layout/layout.component.html
+++ b/src/aixplorer.client/src/app/layout/layout.component.html
@@ -36,19 +36,13 @@
                         <a class="hover:text-gray-300" routerLink="/computer-vision/image-interpretation" (click)="closeSidebar()">Image Interpretation</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-300" routerLink="/machine-learning/regression" (click)="closeSidebar()">Regression</a>
-                    </li>
-                    <li>
-                        <a class="hover:text-gray-300" routerLink="/nlp/question-answering" (click)="closeSidebar()">Question Answering</a>
+                        <a class="hover:text-gray-300" routerLink="/nlp/question-answering" (click)="closeSidebar()">AI Chat</a>
                     </li>
                     <li>
                         <a class="hover:text-gray-300" routerLink="/generative-ai/image-generation" (click)="closeSidebar()">Image Generation</a>
                     </li>
                     <li class="py-2">
                         <hr class="border-t border-gray-600">
-                    </li>
-                    <li>
-                        <a class="hover:text-gray-300" routerLink="/info/technical-notes" (click)="closeSidebar()">Technical Notes</a>
                     </li>
                 </ul>
             </div>
